istio/mesh-peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mesh-wide
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
