istio/mesh-deny-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: mesh-deny-all
  namespace: istio-system
spec:
  action: DENY
  rules:
    - {}
